--- a/flow-fe/package.json
+++ b/flow-fe/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "spectre.css": "^0.5.9",
     "vue": "^2.6.11",
