--- a/flow-fe/package.json
+++ b/flow-fe/package.json
@@ -14,6 +14,7 @@
     "spectre.css": "^0.5.9",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-toasted": "^1.1.28",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
