--- a/flow-fe/package.json
+++ b/flow-fe/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "spectre.css": "^0.5.9",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-toasted": "^1.1.28",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
